# stedt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.md  README.md  build_db.py  build_from_files.py  build_from_tsv.py  build_legacy.py  build_legacy_search_db.py  build_search_db.py  build_static.py  etymon_edit.py  export_files.py  legacy_render.py  package-lock.json  package.json  pyproject.toml  render.py  serve.py  validate.py
.archive/original-snapshot/: README.md  review.html  scrape.py
.github/ISSUE_TEMPLATE/: suggest-edit.yml
.github/scripts/: apply_suggested_edit.py
.github/workflows/: deploy-pages.yml  suggest-edit.yml  validate.yml
archive/original-snapshot/: FETCHLOG.tsv  MANIFEST.tsv
data/: FORMAT.md  chapter_notes.tsv  etyma.tsv  etymon_notes.tsv  glosswords.tsv  hptb.tsv  languagegroups.tsv  languages.tsv  majorcats.tsv  mesoroots.tsv  orphan_links.tsv  orphan_reflex_notes.tsv  otherchapters.tsv  pi.tsv  thesaurus.tsv
data/etyma/: 1.yaml  10.yaml  100.yaml  1001.yaml  1002.yaml  1003.yaml  1004.yaml  1005.yaml  1006.yaml  1007.yaml  101.yaml  1010.yaml  1011.yaml  1012.yaml  1013.yaml  1016.yaml  1017.yaml  1018.yaml  1019.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  11.yaml  110.yaml  1101.yaml  1102.yaml  1103.yaml  1104.yaml  1105.yaml  1107.yaml  1108.yaml  111.yaml  1110.yaml  1111.yaml  1112.yaml  (+5053 more)
data/reference/: bibliography.yaml  hptb.yaml  languagegroups.yaml  languages.yaml  majorcats.yaml  otherchapters.yaml  pi.yaml  reflex-notes.yaml  thesaurus.yaml
data/wordlists/: AAAM-SSM.tsv  ACH1975.tsv  ACST.tsv  AH-CSDPN.tsv  AH-TND.tsv  AJ-BED.tsv  AM-NaLaze1.tsv  AP-Pwo.tsv  ARC-GMA.tsv  AT-MPB.tsv  AW-TBT.tsv  B-ShrpaHQ.tsv  BAI1911.tsv  BB-Belhare.tsv  BBK-Sangtam.tsv  BBK-Yim.tsv  BBL-TL.tsv  BK-AD.tsv  BM-Bah.tsv  BM-Hay.tsv  BM-Lim.tsv  BM-PK7.tsv  BMMM-Bbp.tsv  BP-PPWL.tsv  BRO1837.tsv  Bhat-Boro.tsv  Bhat-TNV.tsv  CB-SpitiQ.tsv  CG-Dolak.tsv  CG-Kath.tsv  CG-NewariQ2.tsv  CG-NewariQ3.tsv  CK-CS.tsv  CK-TujBQ.tsv  CK-TujMQ.tsv  CK-YiQ.tsv  CSL-YIzd.tsv  CYS-Meithei.tsv  DAP-Chm.tsv  DAP-KCD.tsv  (+258 more)
render/: __init__.py  config.py  db.py  entities.py  indexes.py  shell.py  text.py
render/templates/: about.html  languages_index.html  search.html  thesaurus.html
resources/: wordlist-template.tsv  wordlist-template.xlsx
src/: legacy-shim.js  search.js
static/: site.css  site.js
stedt/: __init__.py  cli.py  new_source.py  paths.py  validate.py
stedt/dev/: __init__.py  build_db.py  check_altstar.py  export_dump.py  export_tsv.py  gate_roundtrip.py  invariants.py  parity.py  render_pi_pages.py  search_battery.py  snapshot.py
stedt/legacy/: __init__.py  build_site.py  (+2 more)
stedtdb_v1.0/: README_R.txt  README_denorm.txt  README_dump.txt  README_restore.txt  RELEASENOTES.txt
tools/: build_db.py  export_files.py  export_tsv.py  gate_tsv_roundtrip.py  snapshot.py
web/: package-lock.json  package.json
(+1618 files in other folders)
