[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stedt"
version = "0.1.0"
description = "Build tooling and page renderer for the STEDT static site"
requires-python = ">=3.11"
dependencies = ["jinja2", "typer"]

[project.scripts]
stedt = "stedt.cli:app"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 120

[tool.setuptools.packages.find]
include = ["stedt*"]

[tool.setuptools.package-data]
"stedt.render" = ["templates/*.html"]
"stedt.legacy" = ["assets/**/*"]
