[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stedt"
version = "0.1.0"
description = "Build tooling and page renderer for the STEDT static site"
requires-python = ">=3.11"
dependencies = ["jinja2", "typer", "openpyxl"]

[project.scripts]
stedt = "stedt.cli:app"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 120
target-version = ["py311"]
# Black's default exclude list contains "build", which would silently skip the stedt/build/
# package. Re-specify the exclude list without it (the repo-root setuptools build/ is gitignored,
# which Black already honors). Compiled in verbose mode, so this whitespace is insignificant.
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | \.eggs
  | _build
  | buck-out
  | dist
  | node_modules
)/
'''

[tool.setuptools.packages.find]
include = ["stedt*"]

[tool.setuptools.package-data]
"stedt.render" = ["templates/*.html"]
"stedt.legacy" = ["assets/**/*"]
